[package]
name = "dbus-udisks2"
version = "0.3.0"
edition = "2018"
description = "UDisks2 DBus API"
repository = "https://github.com/pop-os/dbus-udisks2"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
dbus = "^0.9"
num_enum = "^0.7"
futures-util = { version = "^0.3", features = ["async-await"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["macros"] }
dbus-tokio = "^0.7"

[features]
futures = ["dbus/futures", "futures-util"]

[package.metadata.docs.rs]
all-features = true
